# mcp-server-pronunciation

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  publish-mcp-registry.yml  release.yml
docs/: BENCHMARKS.md  MCP_DIRECTORY_SUBMISSIONS.md  PUBLICATION.md  PUBLIC_BETA_PLAN.md  RELEASE.md  TESTING.md
docs/releases/: v0.3.0.md  v0.3.0b1.md  v0.3.0b2.md  v0.3.0b3.md
src/mcp_server_pronunciation/: __init__.py  __main__.py  alignment.py  assessor.py  benchmarks.py  cli.py  config.py  forced_align.py  phonemes.py  prosody.py  record_mic.ps1  recorder.py  sentences.py  server.py  service.py  ui.py
tests/: test_alignment.py  test_assessor.py  test_assessor_pipeline.py  test_benchmark_metrics.py  test_benchmarks.py  test_config.py  test_phonemes.py  test_public_beta_metadata.py  test_recorder_errors.py  test_server_startup.py  test_voice_service.py
