[project]
name = "mcp-server-pronunciation"
version = "0.1.0"
description = "MCP server for English pronunciation practice — record, transcribe with Whisper, and get word-level feedback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Juhong Park" },
]
keywords = ["mcp", "pronunciation", "whisper", "speech", "english"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
mcp-server-pronunciation = "mcp_server_pronunciation:run"

[project.urls]
Homepage = "https://github.com/JuhongPark/mcp-server-pronunciation"
Repository = "https://github.com/JuhongPark/mcp-server-pronunciation"
Issues = "https://github.com/JuhongPark/mcp-server-pronunciation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_pronunciation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
