[project]
name = "mcp-server-pronunciation"
version = "0.2.0"
description = "MCP server for voice conversation with Claude plus English pronunciation, grammar, and fluency feedback"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Juhong Park" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "voice",
    "conversation",
    "pronunciation",
    "english-learning",
    "language-feedback",
    "whisper",
    "speech",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mcp[cli]>=1.2,<2",
    "faster-whisper>=1.0,<2",
    "sounddevice>=0.4,<0.6",
    "numpy>=1.24,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
mcp-server-pronunciation = "mcp_server_pronunciation:cli_main"

[project.urls]
Homepage = "https://github.com/JuhongPark/mcp-server-pronunciation"
Repository = "https://github.com/JuhongPark/mcp-server-pronunciation"
Issues = "https://github.com/JuhongPark/mcp-server-pronunciation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_pronunciation"]

[tool.hatch.build.targets.wheel.force-include]
"src/mcp_server_pronunciation/record_mic.ps1" = "mcp_server_pronunciation/record_mic.ps1"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
